--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JS project</title>
   <link rel="stylesheet" href="./style/style.css">
-  <script src="./js/main.js" defer></script>
+  <!-- <script src="./js/main.js" defer></script> -->
+  <script src="./js/users-arr.js" defer></script>
 </head>
 
 <body>
