--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <title>JS project</title>
   <link rel="stylesheet" href="./style/style.css">
   <!-- <script src="./js/main.js" defer></script> -->
-  <script src="./js/users-arr.js" defer></script>
+  <!-- <script src="./js/users-arr.js" defer></script> -->
+  <script src="./js/destruct.js" defer></script>
 </head>
 
 <body>
