--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <link rel="stylesheet" href="./style/style.css">
   <!-- <script src="./js/main.js" defer></script> -->
   <!-- <script src="./js/users-arr.js" defer></script> -->
-  <script src="./js/destruct.js" defer></script>
+  <!-- <script src="./js/destruct.js" defer></script> -->
+  <script src="./js/oop.js" defer></script>
 </head>
 
 <body>
